WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159656
REGRESSION: Speech Synthesis: getting list of voices no longer works
https://bugs.webkit.org/show_bug.cgi?id=159656
Summary
REGRESSION: Speech Synthesis: getting list of voices no longer works
Sam Weinig
Reported
2016-07-11 16:50:08 PDT
REGRESSION: Speech Synthesis: getting list of voices no longer works
Attachments
Patch
(1.99 KB, patch)
2016-07-11 16:52 PDT
,
Sam Weinig
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2016-07-11 16:50:49 PDT
On iOS, getting the list of voices doesn't seem to work every time. Refreshing seems to help.
Sam Weinig
Comment 2
2016-07-11 16:51:05 PDT
<
rdar://problem/22954120
>
Sam Weinig
Comment 3
2016-07-11 16:52:30 PDT
Created
attachment 283366
[details]
Patch
Sam Weinig
Comment 4
2016-07-11 16:54:25 PDT
Committed
r203099
: <
http://trac.webkit.org/changeset/203099
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug