Speech Synthesis: getting list of voices no longer works <rdar://problem/22954120> https://bugs.webkit.org/show_bug.cgi?id=159656

Reviewed by Tim Horton.

* platform/PlatformSpeechSynthesizer.h:
* platform/mac/PlatformSpeechSynthesizerMac.mm:
Default initialize m_voiceListIsInitialized to false so it is
initialized on both Mac and iOS. Remove the explicit initialization
from the Mac.


Canonical link: https://commits.webkit.org/177805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203099 268f45cc-cd09-0410-ab3c-d52691b4dbfc