Source/WebCore/platform/mac/PlatformSpeechSynthesizerMac.mm
@@ -206,8 +206,7 @@
 namespace WebCore {
 
 PlatformSpeechSynthesizer::PlatformSpeechSynthesizer(PlatformSpeechSynthesizerClient* client)
-    : m_voiceListIsInitialized(false)
-    , m_speechSynthesizerClient(client)
+    : m_speechSynthesizerClient(client)
 {
 }
 
